# casper-cpp-sdk

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.circleci/: config.yml
include/Casper/: Base.h  CasperClient.h
include/Casper/Algorithm/: Join.hpp
include/Casper/ByteSerializers/: BaseByteSerializer.h  CLValueByteSerializer.h  DeployApprovalByteSerializer.h  DeployByteSerializer.h  ExecutableDeployItemByteSerializer.h  GlobalStateKeyByteSerializer.h  NamedArgByteSerializer.h
include/Casper/JsonRpc/Connection/: HttpLibConnector.h  httplib.h
include/Casper/JsonRpc/ResultTypes/: GetAuctionInfoResult.h  GetBalanceResult.h  GetBlockResult.h  GetBlockTransfersResult.h  GetDeployResult.h  GetDictionaryItemResult.h  GetEraInfoResult.h  GetItemResult.h  GetStateRootHashResult.h  GetStatusResult.h  InfoGetPeersResult.h  PutDeployResult.h  QueryGlobalStateResult.h  RpcResult.h
include/Casper/Types/: AccessRights.h  Account.h  AuctionState.h  Bid.h  Block.h  BlockInfo.h  CLConverter.h  CLType.h  CLTypeParsed.h  CLValue.h  Configuration.h  Contract.h  ContractPackage.h  Delegator.h  Deploy.h  DeployApproval.h  DeployHeader.h  DeployInfo.h  ED25519Key.h  EntryPoint.h  EraEnd.h  EraInfo.h  EraSummary.h  EraValidators.h  ExecutableDeployItem.h  ExecutionEffect.h  ExecutionResult.h  GlobalStateKey.h  KeyAlgo.h  KeyPair.h  ModuleBytes.h  NamedArg.h  NamedKey.h  NextUpgrade.h  Operation.h  Peer.h  PublicKey.h  Secp256k1Key.h  SeigniorageAllocation.h  Signature.h  (+15 more)
include/Casper/Utils/: CEP57Checksum.h  CryptoUtil.h  LogConfigurator.h  StringUtil.h
lib/jsonrpccxx/: client.hpp
src/: CMakeLists.txt  CasperClient.cpp
src/Casper/: Base.cpp  CMakeLists.txt  CasperClient.cpp
src/Casper/Algorithm/: CMakeLists.txt  Join.cpp
src/Casper/ByteSerializers/: BaseByteSerializer.cpp  CLValueByteSerializer.cpp  CMakeLists.txt  DeployApprovalByteSerializer.cpp  DeployByteSerializer.cpp  ExecutableDeployItemByteSerializer.cpp  GlobalStateKeyByteSerializer.cpp  NamedArgByteSerializer.cpp
src/Casper/JsonRpc/: CMakeLists.txt
src/Casper/JsonRpc/Connection/: CMakeLists.txt  HttpLibConnector.cpp  httplib.cpp
src/Casper/JsonRpc/ResultTypes/: CMakeLists.txt  GetAuctionInfoResult.cpp  GetBalanceResult.cpp  GetBlockResult.cpp  GetBlockTransfersResult.cpp  GetDeployResult.cpp  GetDictionaryItemResult.cpp  GetEraInfoResult.cpp  GetItemResult.cpp  GetStateRootHashResult.cpp  GetStatusResult.cpp  InfoGetPeersResult.cpp  PutDeployResult.cpp  QueryGlobalStateResult.cpp  RpcResult.cpp
src/Casper/Types/: AccessRights.cpp  Account.cpp  AuctionState.cpp  Bid.cpp  Block.cpp  BlockInfo.cpp  CLConverter.cpp  CLType.cpp  CLTypeParsed.cpp  CLValue.cpp  CMakeLists.txt  Configuration.cpp  Contract.cpp  ContractPackage.cpp  Delegator.cpp  Deploy.cpp  DeployApproval.cpp  DeployHeader.cpp  DeployInfo.cpp  ED25519Key.cpp  EntryPoint.cpp  EraEnd.cpp  EraInfo.cpp  EraSummary.cpp  EraValidators.cpp  ExecutableDeployItem.cpp  ExecutionEffect.cpp  ExecutionResult.cpp  GlobalStateKey.cpp  KeyAlgo.cpp  KeyPair.cpp  ModuleBytes.cpp  NamedArg.cpp  NamedKey.cpp  NextUpgrade.cpp  Operation.cpp  Peer.cpp  PublicKey.cpp  Secp256k1Key.cpp  SeigniorageAllocation.cpp  (+16 more)
src/Casper/Utils/: CEP57Checksum.cpp  CMakeLists.txt  CryptoUtil.cpp  File.cpp  LogConfigurator.cpp  StringUtil.cpp
src/CryptoPP/: CMakeLists.txt
src/include/ByteSerializers/: CLValueByteSerializer.h
src/include/Types/: CLValue.h  ED25519Key.cpp  PublicKey.h  Secp256k1Key.cpp  Signature.h
src/include/Utils/: CryptoUtil.cpp
test/: CMakeLists.txt
tests/: CLValueByteSerializerTest.cpp  CLValueByteSerializerTest.hpp  CMakeLists.txt  ClientTest.cpp  DeployItemByteSerializerTest.cpp  DeployItemByteSerializerTest.hpp  RpcTest.cpp  RpcTest.hpp  TempFileHandler.hpp
tests/data/: TestSourceSecretKey.hpp  TestTargetSecretKey.hpp
tools/cmake/: CasperSDKConfig.cmake.in  FindCryptoPP.cmake  caspersdk-add-public-header.cmake  caspersdk-add-sources.cmake  caspersdk-configure-cxx-target.cmake  caspersdk-find-dependencies.cmake  caspersdk-install.cmake  caspersdk-link-external.cmake  caspersdk-link-internal.cmake  caspersdk-print-build-details.cmake  caspersdk-set-osx-deployment-target.cmake  vcpkg_android.cmake
tools/docker/: docker-bake.hcl
tools/docker/android/: Dockerfile  README.md  android  boost  build-base  casper_sdk_build  cmake-bootstrap  gtest  lmdb  openssl  protobuf  qt  qt-bootstrap  qt-host  run  secp256k1  sodium  tools  zeromq
tools/docker/common/: boost  cmake  cmake-openssl  cmakerc  download  downloader  iwyu  iwyu-download  libguarded  openssl  opentxs  otcommon
tools/docker/runtime/: alpine.base  alpine.build  alpine.cmake-bootstrap  alpine.run  fedora.base  fedora.build  fedora.cmake-bootstrap  fedora.run  patch-simpleini  runtime  sdk  ubuntu.base  ubuntu.build  ubuntu.cmake-bootstrap  ubuntu.run
tools/format/: exclude
tools/iwyu/: mapping_file
