add_subdirectory(Casper)
add_subdirectory(CryptoPP)

if(CASPERSDK_INSTALL_HEADERS)
  target_sources(
    casper_sdk
    PUBLIC
      FILE_SET
      HEADERS
      FILES
      "${${PROJECT_NAME}_SOURCE_DIR}/external/jsonrpccxx/iclientconnector.hpp"
      "${${PROJECT_NAME}_SOURCE_DIR}/external/jsonrpccxx/typemapper.hpp"
      "${${PROJECT_NAME}_SOURCE_DIR}/external/jsonrpccxx/batchclient.hpp"
      "${${PROJECT_NAME}_SOURCE_DIR}/external/jsonrpccxx/server.hpp"
      "${${PROJECT_NAME}_SOURCE_DIR}/external/jsonrpccxx/dispatcher.hpp"
      "${${PROJECT_NAME}_SOURCE_DIR}/external/jsonrpccxx/common.hpp"
      "${${PROJECT_NAME}_SOURCE_DIR}/external/jsonrpccxx/client.hpp"
      "${${PROJECT_NAME}_SOURCE_DIR}/external/wide-integer/uintwide_t.h"
      "${${PROJECT_NAME}_SOURCE_DIR}/external/nlohmann/json.hpp"
  )
endif()
